--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
   - title: "Debian"
     url: /debian/
   - title: "Fotografie"
-    url: /photography/
+    url: /fotografie/
   - title: "Privat"
     url: /private/
 
