--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ main:
     url: /debian/
   - title: "Fotografie"
     url: /fotografie/
+  - title: "Aquaristik"
+    url: /aquaristik/
   - title: "Privat"
     url: /private/
 
