--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ after_success:
 - find ./_site -type f
 
 before_deploy:
-- ssh-keyscan -t $TRAVIS_SSH_KEY_TYPES -p "DEPLOY_SSH_PORT" -H "$DEPLOY_SSH_HOST" 2>&1 | tee -a ${TRAVIS_HOME}/.ssh/known_hosts
+- ssh-keyscan -t rsa -p "DEPLOY_SSH_PORT" -H "$DEPLOY_SSH_HOST" 2>&1 | tee -a ${TRAVIS_HOME}/.ssh/known_hosts
 - openssl aes-256-cbc -K $encrypted_9bf2067e671e_key -iv $encrypted_9bf2067e671e_iv -in tools/deploy_rsa.enc -out "$DEPLOY_SSH_KEY" -d
 - eval "$(ssh-agent -s)"
 - chmod 600 "$DEPLOY_SSH_KEY"
