Füge Umleitungen von 2008 bis 2013 hinzu

--- a/.htaccess
+++ b/.htaccess
@@ -30,4 +30,49 @@ RewriteCond %{REQUEST_URI} ^/2007/11/ldflags-and\.html
 RewriteCond %{REQUEST_URI} ^/2007/12/fyi-docbook-defguide-2017-ready-sun\.html
 RewriteCond %{REQUEST_URI} ^/2007/12/docbook-defguide-solving-performance\.html
 RewriteCond %{REQUEST_URI} ^/2007/12/bluefish-unstable-packages-ready-for\.html
+RewriteCond %{REQUEST_URI} ^/2008/02/pbuilder-and-sun-java\.html
+RewriteCond %{REQUEST_URI} ^/2008/02/packages-removed-from-debianwgddde\.html
+RewriteCond %{REQUEST_URI} ^/2008/03/diploma-exams-are-calling-please-read\.html
+RewriteCond %{REQUEST_URI} ^/2008/04/sorry\.html
+RewriteCond %{REQUEST_URI} ^/2008/05/dsa-1571-1-new-openssl-packages-fix\.html
+RewriteCond %{REQUEST_URI} ^/2008/05/usrlibpython23-garbage\.html
+RewriteCond %{REQUEST_URI} ^/2008/10/repository-key-expired-iv\.html
+RewriteCond %{REQUEST_URI} ^/2008/10/etcaptsourceslistd-snippets-available\.html
+RewriteCond %{REQUEST_URI} ^/2009/01/ubuntu-hardy-repository-replaced-by\.html
+RewriteCond %{REQUEST_URI} ^/2009/02/bluefish-unstable-packages-for-etch\.html
+RewriteCond %{REQUEST_URI} ^/2009/02/server-paths-broken\.html
+RewriteCond %{REQUEST_URI} ^/2009/02/update-to-lenny\.html
+RewriteCond %{REQUEST_URI} ^/2009/03/debianubuntu-packages-of-bluefish\.html
+RewriteCond %{REQUEST_URI} ^/2009/03/network-doesnt-come-up-after-update-to\.html
+RewriteCond %{REQUEST_URI} ^/2009/04/ww-allowemtpyinput-is-on-devices-using\.html
+RewriteCond %{REQUEST_URI} ^/2009/04/abit-airpace-ath5k-and-eduroam\.html
+RewriteCond %{REQUEST_URI} ^/2009/08/ubuntu-jaunty-repository-replaced-by\.html
+RewriteCond %{REQUEST_URI} ^/2009/09/writing-manual-pages-in-groff-1\.html
+RewriteCond %{REQUEST_URI} ^/2009/09/green-it-gsoc-topic\.html
+RewriteCond %{REQUEST_URI} ^/2009/10/repository-key-expired-v\.html
+RewriteCond %{REQUEST_URI} ^/2009/11/toshiba-tecra-a10-ptsb5e-part-i\.html
+RewriteCond %{REQUEST_URI} ^/2009/11/good-bye-warren\.html
+RewriteCond %{REQUEST_URI} ^/2009/11/fixed-server-outtime\.html
+RewriteCond %{REQUEST_URI} ^/2009/11/toshiba-tecra-a10-ptsb5e-part-ii\.html
+RewriteCond %{REQUEST_URI} ^/2009/11/toshiba-tecra-a10-ptsb5e-part-iii\.html
+RewriteCond %{REQUEST_URI} ^/2009/12/testing-smart-status-of-my-toshiba-usb\.html
+RewriteCond %{REQUEST_URI} ^/2009/12/re-making-pbuilder-just-that-little-bit\.html
+RewriteCond %{REQUEST_URI} ^/2010/01/new-bluefish-20-packages-available-for\.html
+RewriteCond %{REQUEST_URI} ^/2011/10/repository-key-expired-vi\.html
+RewriteCond %{REQUEST_URI} ^/2011/11/debian-lenny-and-ubuntu-hardy-intrepid\.html
+RewriteCond %{REQUEST_URI} ^/2012/10/back-to-life\.html
+RewriteCond %{REQUEST_URI} ^/2012/10/customizing-nanonblogger-incorporation\.html
+RewriteCond %{REQUEST_URI} ^/2012/10/repository-key-expired-vii\.html
+RewriteCond %{REQUEST_URI} ^/2013/06/changed-to-bloggercom\.html
+RewriteCond %{REQUEST_URI} ^/2013/06/getting-tp-link-tl-wn772nc-usb-wlan\.html
+RewriteCond %{REQUEST_URI} ^/2013/06/dear-lazyweb-why-does-lshw-still\.html
+RewriteCond %{REQUEST_URI} ^/2013/07/moving-from-software-raid-to-raid-and\.html
+RewriteCond %{REQUEST_URI} ^/2013/07/reconfiguring-my-mail-server-to-reject\.html
+RewriteCond %{REQUEST_URI} ^/2013/07/n54l-lcd-mod-with-u204fr-a3-lcdmodkit\.html
+RewriteCond %{REQUEST_URI} ^/2013/08/setting-up-network-buildd-with-pbuilder\.html
+RewriteCond %{REQUEST_URI} ^/2013/08/local-link-networking-on-debianlinux\.html
+RewriteCond %{REQUEST_URI} ^/2013/08/hp-n54l-microserver-energy-efficiency\.html
+RewriteCond %{REQUEST_URI} ^/2013/08/n54l-lcd-mod-with-u204fr-a3-lcdmodkit\.html
+RewriteCond %{REQUEST_URI} ^/2013/08/create-knoppix-usb-boot-stick-from\.html
+RewriteCond %{REQUEST_URI} ^/2013/12/link-writers-against-mass-surveillance\.html
 RewriteRule ^(.*)$ https://www.wgdd.org/$1 [L,R=301]
