Ändere den Titel und Untertitel
sieht besser aus

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 url: "https://www.wgdd.de"
-title: "[erfahrungen, meinungen, halluzinationen]"
+title: "wgdd.de"
+subtitle: "[erfahrungen, meinungen, halluzinationen]"
 email: webmaster@wgdd.de
 description: >-
   Ein private Webseite mit Blog über Software, Fotografie, Aquaristik und
