--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ search: true
 
 # Build settings
 markdown: kramdown
+lsi: true
 remote_theme: mmistakes/minimal-mistakes@4.20.2
 minimal_mistakes_skin: "default"
 # Outputting
