--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ addons:
     packages:
     - libcurl4-openssl-dev # resolve SSL issue of htmlproofer
     - locales-all
+    - libgsl-dev # gsl gem
 
 rvm:
 - 2.5
